Update static web app route configuration

--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -66,6 +66,7 @@
         "patch"
       ],
       "rewrite": "index.html",
+      "statusCode": 701,
       "allowedRoles": [
         "anonymous"
       ]
