--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -1,75 +1,6 @@
 {
-  "routes": [
-    {
-      "route": "/home",
-      "methods": [
-        "get",
-        "connect",
-        "options",
-        "trace",
-        "patch",
-        "head",
-        "post",
-        "put",
-        "delete"
-      ],
-      "rewrite": "/index.html",
-      "statusCode": 700,
-      "allowedRoles": [
-        "anonymous",
-        "authenticated"
-      ]
-    },
-    {
-      "route": "/home2",
-      "methods": [
-        "get",
-        "head",
-        "post",
-        "put",
-        "delete",
-        "connect",
-        "options",
-        "trace",
-        "patch"
-      ],
-      "rewrite": "/index.html",
-      "statusCode": 701
-    },
-    {
-      "route": "/cart",
-      "methods": [
-        "get",
-        "head",
-        "post",
-        "put",
-        "delete",
-        "connect",
-        "options",
-        "trace",
-        "patch"
-      ],
-      "rewrite": "index.html",
-      "statusCode": 701
-    },
-    {
-      "route": "/details",
-      "methods": [
-        "get",
-        "head",
-        "post",
-        "put",
-        "delete",
-        "connect",
-        "options",
-        "trace",
-        "patch"
-      ],
-      "rewrite": "index.html",
-      "statusCode": 701,
-      "allowedRoles": [
-        "anonymous"
-      ]
-    }
-  ]
+  "navigationFallback": {
+    "rewrite": "/index.html",
+    "exclude": ["/images/*.{png,jpg,gif}", "/css/*"]
+  }
 }
